<resources>
    <string name="app_name">niceToMeetYou</string>
    <string name="main_introduce">Introduce</string>
    <string name="main_stopwatch">StopWatch</string>
    <string name="main_counter">Counter</string>
    <string name="main_calculator">Calculator</string>
    <string name="main_todo_list">ToDoList</string>
    <string name="main_timer">Timer</string>
    <string name="main_text_clock_hint">MM月dd日(E)　HH:mm:ss</string>
    <string name="back_intent">Back</string>
    <string name="todo_text_view">ToDoList</string>
    <string name="todo_add">+</string>
    <string name="preference_file_key">DataStore</string>
    <string name="counter_count_text">0</string>
    <string name="counter_title">Counter</string>
    <string name="counter_reset">Clear</string>
    <string name="counter_sub">ー</string>
    <string name="stop_watch_count">00:00.0</string>
    <string name="stop_watch_stop">Stop</string>
    <string name="stop_watch_reset">Reset</string>
    <string name="stop_watch_lap">LAP</string>
    <string name="stop_watch_start">Start</string>
    <string name="stop_watch_save_lap">Load LAP Time</string>
    <string name="timer_start">Start</string>
    <string name="timer_restart">Restart</string>
    <string name="timer_stop">Stop</string>
    <string name="timer_reset">Reset</string>
    <string name="timer_add_ten_second">+10sec</string>
    <string name="timer_add_one_minute">+1min</string>
    <string name="timer_add_five_minute">+5min</string>
    <string name="timer_count">00:00.0</string>
    <string name="timer_lap">Load LAP Time</string>

    <string name="calculator_ac">AC</string>
    <string name="calculator_change_state">+/-</string>
    <string name="calculator_root">√</string>
    <string name="calculator_divide">÷</string>
    <string name="calculator_multiply">×</string>
    <string name="calculator_subtract">-</string>
    <string name="calculator_plus">+</string>
    <string name="calculator_dot">.</string>
    <string name="calculator_exponentiation">^</string>
    <string name="calculator_equal">=</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="mizunoapp">MizunoApp</string>

</resources>