<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CalculatorActivity">

    <Button
        android:id="@+id/calculator_return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_intent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/result"
        android:layout_width="330dp"
        android:layout_height="90dp"
        android:layout_marginTop="120dp"
        android:text="@string/zero"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="446dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/all_clear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="64dp"
                android:backgroundTint="@color/lightBlue"
                android:text="@string/calculator_ac"
                android:textColor="#3F51B5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/state"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="@color/lightBlue"
                android:text="@string/calculator_change_state"
                android:textColor="#3F51B5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sqrt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="@color/lightBlue"
                android:text="@string/calculator_root"
                android:textColor="#3F51B5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/division"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="@color/lightBlue"
                android:text="@string/calculator_divide"
                android:textColor="#3F51B5"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="#E7E6E8"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="#E7E6E8"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="#E7E6E8"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/multiplication"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="@color/lightBlue"
                android:text="@string/calculator_multiply"
                android:textColor="#3F51B5"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="#E7E6E8"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/five"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="#E7E6E8"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/six"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="#E7E6E8"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/subtraction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="@color/lightBlue"
                android:text="@string/calculator_subtract"
                android:textColor="#3F51B5"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="#E7E6E8"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/two"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="#E7E6E8"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/three"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="#E7E6E8"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/addition"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="@color/lightBlue"
                android:text="@string/calculator_plus"
                android:textColor="#3F51B5"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="#E7E6E8"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/dot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="#E7E6E8"
                android:text="@string/calculator_dot"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/exponetion"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="@color/lightBlue"
                android:text="@string/calculator_exponentiation"
                android:textColor="#3F51B5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:backgroundTint="@color/lightBlue"
                android:text="@string/calculator_equal"
                android:textColor="#3F51B5"
                android:textSize="24sp" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="#54000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>