<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:fontFamily="@font/anton"
        android:gravity="center"
        android:text="@string/mizunoapp"
        android:textAlignment="center"
        android:textColor="#F7FFEB"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/introduction_button"
                android:layout_width="match_parent"
                android:layout_height="160sp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/amaranth"
                android:text="@string/main_introduce"
                android:textColor="#FF5722"
                android:textSize="64sp"
                android:textStyle="bold"
                app:cornerRadius="4dp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/stop_watch_button"
                android:layout_width="match_parent"
                android:layout_height="160sp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/amaranth"
                android:text="@string/main_stopwatch"
                android:textColor="#FF9800"
                android:textSize="64sp"
                android:textStyle="bold"
                app:cornerRadius="4dp"
                tools:ignore="VisualLintButtonSize,TextSizeCheck,TextContrastCheck" />

            <Button
                android:id="@+id/counter_button"
                android:layout_width="match_parent"
                android:layout_height="160sp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/amaranth"
                android:text="@string/main_counter"
                android:textColor="#FFC107"
                android:textSize="64sp"
                android:textStyle="bold"
                app:cornerRadius="4dp"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />

            <Button
                android:id="@+id/calculator_button"
                android:layout_width="match_parent"
                android:layout_height="160sp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/amaranth"
                android:text="@string/main_calculator"
                android:textColor="#FFEB3B"
                android:textSize="64sp"
                android:textStyle="bold"
                app:cornerRadius="4dp"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />

            <Button
                android:id="@+id/to_do_list_button"
                android:layout_width="match_parent"
                android:layout_height="160sp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/amaranth"
                android:text="@string/main_todo_list"
                android:textColor="#CDDC39"
                android:textSize="64sp"
                android:textStyle="bold"
                app:cornerRadius="4dp"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />

            <Button
                android:id="@+id/timer_button"
                android:layout_width="match_parent"
                android:layout_height="160sp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/amaranth"
                android:text="@string/main_timer"
                android:textColor="#4CAF50"
                android:textSize="64sp"
                android:textStyle="bold"
                android:typeface="sans"
                app:cornerRadius="4dp"
                tools:ignore="VisualLintButtonSize,TextContrastCheck,TouchTargetSizeCheck" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>